# full-stack-fastapi-template

backend/: README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 5ecd1e887693_create_user_table.py  ffa0d86da885_change_user_id_to_uuid.py
backend/app/api/: main.py
backend/app/api/v1/routers/: user.py
backend/app/api/v1/schemas/: user.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: user.py
backend/app/services/: user_service.py
backend/app/utils/: password.py
frontend/: biome.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  providers.tsx  routeTree.gen.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/common/: theme-switcher.tsx
frontend/src/components/layout/: app-sidebar.tsx  sidebar-items.tsx
frontend/src/components/layout/admin/: side-bar.tsx  sideibar-items.tsx
frontend/src/components/ui/: button.tsx  close-button.tsx  dropdown-menu.tsx  sidebar.tsx  tooltip.tsx
frontend/src/contexts/: theme-context.tsx
frontend/src/hooks/: use-custom-toast.ts  use-moblie.ts  use-theme.ts
frontend/src/routes/: __root.tsx  _auth.tsx  _root.tsx  admin.tsx  index.tsx  schedule.tsx
frontend/src/routes/_auth/: login.tsx  recover-password.tsx  signup.tsx
frontend/src/routes/admin/: index.tsx  products.tsx  settings.tsx
frontend/src/styles/: global.css
frontend/src/utils/: cn.ts
scripts/: generate-client.sh
