[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "phonglh",email = "phonghngle@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.117.1,<0.118.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "mysql-connector-python (>=9.4.0,<10.0.0)",
    "alembic (>=1.16.5,<2.0.0)"
]

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
